<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        card_view:contentPadding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/flag_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country_code_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/code"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/country_exchange_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/coin_exchange"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flag_icon"

            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country_code_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nigerian_naira"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
